spacing issues again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ hr {
 }
 
 .woodBannerQuoteBox {
-    top: -8vh;
     position: relative;
     height: 100%;
 }
